# zabbid

./: .dictionary.txt  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  AGENTS.MD  AGENTS.md  COVERAGE_GAPS.md  Cargo.toml  DEAD_CODE_AUDIT.md  Dockerfile  FLAKY_TESTS_ANALYSIS.md  IGNORED_TESTS.md  PLAN.md  README.md  UI_VIOLATIONS.md  api_cli.py  biome.json  deny.toml  diesel.toml  docker-compose.yml  flake.nix  nginx.conf  notes.txt  renovate.json  typos.toml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  capabilities.rs  csv_preview.rs  error.rs  handlers.rs  lib.rs  password_policy.rs  request_response.rs
crates/api/src/tests/: api_tests.rs  authorization_tests.rs  helpers.rs  lifecycle_enforcement_tests.rs  mod.rs  operator_tests.rs  password_tests.rs  round_tests.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/audit/src/tests/: mod.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: bid_order.rs  bid_status.rs  bid_window.rs  bid_year.rs  error.rs  leave_accrual.rs  leave_availability.rs  lib.rs  readiness.rs  types.rs  validation.rs
crates/domain/src/tests/: error.rs  mod.rs  types.rs  validation.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/2026-01-14-000001_create_operators/: down.sql  up.sql
crates/persistence/migrations/2026-01-14-000002_create_canonical_tables/: down.sql  up.sql
crates/persistence/migrations/2026-01-14-000003_create_audit_tables/: down.sql  up.sql
crates/persistence/migrations/2026-01-17-000001_add_lifecycle_state/: down.sql  up.sql
crates/persistence/migrations/2026-01-17-000002_add_system_area_flag/: down.sql  up.sql
crates/persistence/migrations/2026-01-17-000003_add_canonical_data_tables/: down.sql  up.sql
crates/persistence/migrations/2026-01-18-150000-0000_add_user_participation_flags/: down.sql  up.sql
crates/persistence/migrations/2026-01-19-160000-0000_add_round_groups_and_rounds/: down.sql  up.sql
crates/persistence/migrations/2026-01-20-034331-0000_correct_round_area_relationships/: down.sql  up.sql
crates/persistence/migrations/2026-01-20-120000-0000_add_bid_schedule_to_bid_years/: down.sql  up.sql
crates/persistence/migrations/2026-01-20-150000-0000_add_areas_round_group_fk/: down.sql  up.sql
crates/persistence/migrations/2026-01-20-163906-0000_add_no_bid_reviewed_flag/: down.sql  up.sql
crates/persistence/migrations/2026-01-21-120000-0000_add_bid_windows_table/: down.sql  up.sql
crates/persistence/migrations/2026-01-21-180000-0000_add_bid_status_tables/: down.sql  up.sql
crates/persistence/migrations/2026-01-21-200000-0000_add_round_id_to_bid_windows/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-14-000001_create_operators/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-14-000002_create_canonical_tables/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-14-000003_create_audit_tables/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-17-000001_add_lifecycle_state/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-17-000002_add_system_area_flag/: up.sql
crates/persistence/migrations_mysql/2026-01-17-000003_add_canonical_data_tables/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-18-090410-0000_add_bid_year_metadata/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-18-150000-0000_add_user_participation_flags/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-19-160000-0000_add_round_groups_and_rounds/: up.sql
crates/persistence/migrations_mysql/2026-01-20-034406-0000_correct_round_area_relationships/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-20-120000-0000_add_bid_schedule_to_bid_years/: up.sql
crates/persistence/migrations_mysql/2026-01-20-150000-0000_add_areas_round_group_fk/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-20-163906-0000_add_no_bid_reviewed_flag/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-21-120000-0000_add_bid_windows_table/: up.sql
crates/persistence/migrations_mysql/2026-01-21-180000-0000_add_bid_status_tables/: down.sql  up.sql
crates/persistence/migrations_mysql/2026-01-21-200000-0000_add_round_id_to_bid_windows/: down.sql  up.sql
crates/persistence/src/: data_models.rs  diesel_migrations.rs  diesel_schema.rs  error.rs  lib.rs
crates/persistence/src/backend/: mod.rs  mysql.rs  sqlite.rs
crates/persistence/src/mutations/: audit.rs  bid_status.rs  bootstrap.rs  canonical.rs  mod.rs  operators.rs
crates/persistence/src/mysql/: mod.rs
crates/persistence/src/queries/: audit.rs  bid_status.rs  canonical.rs  completeness.rs  mod.rs  operators.rs  readiness.rs  rounds.rs  state.rs  test_generic.rs
crates/persistence/src/sqlite/: bootstrap.rs  mod.rs  operators.rs  persistence.rs  queries.rs  schema.rs
crates/persistence/src/tests/: audit_serialization_tests.rs  backend_validation_tests.rs  completeness_tests.rs  mod.rs  mutation_error_tests.rs
crates/persistence/src/tests/bootstrap_tests/: mod.rs
crates/persistence/src/tests/canonical_tests/: canonicalization.rs  lookup_failures.rs  mod.rs
crates/persistence/src/tests/initialization_tests/: mod.rs
crates/persistence/src/tests/operator_tests/: mod.rs
crates/persistence/src/tests/override_tests/: mod.rs
crates/persistence/src/tests/state_tests/: audit_timeline_tests.rs  current_state_tests.rs  historical_state_tests.rs  mod.rs  persistence_tests.rs
crates/server/: Cargo.toml
crates/server/src/: live.rs  main.rs  session.rs
docs/: DEPLOYMENT.md  test-migration-guide.md
plans/: PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_14.md  PHASE_15.md  PHASE_2.md  PHASE_22.2.md  PHASE_22.3.md  PHASE_22.md  PHASE_23.md  PHASE_23c.md  PHASE_23d.md  PHASE_23e.md  PHASE_23f.md  PHASE_24.md  PHASE_24a.md  PHASE_24b.md  PHASE_24c.md  PHASE_24d.md  PHASE_24f.md  PHASE_24g.md  PHASE_24h.md  PHASE_25.md  PHASE_26.md  PHASE_26A.md  PHASE_26B.md  PHASE_26F.md  PHASE_27.md  PHASE_28.md  PHASE_28_WORKING_STATE.md  (+25 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+172 files in other folders)
