[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fredsystems/zabbid"
readme = "README.md"
keywords = ["zab", "bid", "monitoring"]
categories = ["monitoring"]

[workspace.dependencies]
axum = { version = "0.8.1", features = ["ws"] }
cargo_metadata = "0.23.1"
clap = { version = "4.5.54", features = ["derive"] }
clap-cargo = "0.18.3"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
duct = "1.1.1"
futures = "0.3.31"
num-traits = "0.2.19"
rand = "0.9.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["serde", "macros", "parsing", "formatting"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
