[workspace]
members = ["crates/*", "xtask"]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/fredsystems/zabbid"
readme = "README.md"
keywords = ["zab", "bid", "monitoring"]
categories = ["monitoring"]

[workspace.dependencies]
axum = { version = "0.8.1", features = ["ws"] }
bcrypt = "0.18.0"
cargo_metadata = "0.23.1"
chrono = "0.4.43"
chrono-tz = "0.10.0"
clap = { version = "4.5.54", features = ["derive"] }
clap-cargo = "0.18.3"
clap-verbosity-flag = "3.0.4"
color-eyre = "0.6.5"
csv = "1.3.1"
diesel = { version = "2.3.5", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "mysql",
] }
diesel_migrations = "2.3.1"
duct = "1.1.1"
futures = "0.3.31"
num-traits = "0.2.19"
pastey = "0.2.1"
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.9"
time = { version = "0.3.45", features = [
    "serde",
    "macros",
    "parsing",
    "formatting",
] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.3"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
