[package]
name = "xtask"
edition = "2021"
publish = false
license.workspace = true

[dependencies]
cargo_metadata.workspace = true
clap.workspace = true
clap-cargo.workspace = true
clap-verbosity-flag.workspace = true
color-eyre.workspace = true
duct.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
