[package]
name = "zab-bid-audit"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Audit types and invariants for the ZAB Bidding System"

[dependencies]
zab-bid-domain = { path = "../domain" }

[dev-dependencies]
