[package]
name = "zab-bid-domain"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Domain types and rule validation for the ZAB Bidding System"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
time.workspace = true

[dev-dependencies]
