[package]
name = "zab-bid-persistence"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Persistence layer for the ZAB Bidding System"

[dependencies]
bcrypt.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
num-traits.workspace = true
pastey.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
zab-bid = { path = "../core" }
zab-bid-audit = { path = "../audit" }
zab-bid-domain = { path = "../domain" }

[dev-dependencies]
