[package]
name = "zab-bid-server"
edition.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "HTTP server for the ZAB Bidding System"

[[bin]]
name = "zab-bid-server"
path = "src/main.rs"

[dependencies]
zab-bid = { path = "../core" }
zab-bid-api = { path = "../api" }
zab-bid-audit = { path = "../audit" }
zab-bid-domain = { path = "../domain" }
zab-bid-persistence = { path = "../persistence" }

axum.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
